--- a/tutorio/index.html
+++ b/tutorio/index.html
@@ -93,7 +93,7 @@
 
             <div class="gallery">
               <a target="_blank" href="mountains.jpg">
-                <img src="img/Sigur_Rós_2013.jpg" alt="Mountains" width="300" height="200">
+                <img src="img/Nazippe_haniamir_ncnd.jpg" alt="Mountains" width="300" height="200">
               </a>
 
             </div>
@@ -121,7 +121,7 @@
 
             <div class="gallery">
               <a target="_blank" href="mountains.jpg">
-                <img src="img/Sigur_Rós_2013.jpg" alt="Mountains" width="300" height="200">
+                <img src="img/SNazippe_haniamir_ncnd.jpg" alt="Mountains" width="300" height="200">
               </a>
 
             </div>
@@ -137,7 +137,7 @@
             <div class="mac_info">
                 <img class="mySlides" src="img/Sigur_Rós_2013.jpg">
                 <img class="mySlides" src="img/Lead-Singer-Singer-Performance-Show-Music-Stage-455750.jpg">
-                <img class="mySlides" src="img/Sigur_Rós_2013.jpg">
+                <img class="mySlides" src="img/Nazippe_haniamir_ncnd.jpg">
                 <img class="mySlides" src="img/Lead-Singer-Singer-Performance-Show-Music-Stage-455750.jpg">
 
                 <button class="left_b" onclick="plusDivs(-1)">&#10094;</button>
