--- a/LawComDemo/index.html
+++ b/LawComDemo/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Makeup by dentov13</title>
+    <title>Makeup by RDJ Sollutions</title>
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
@@ -315,8 +315,8 @@
     <footer class="footer">
         <div class="footer__text">
             <div class="footer__text-name">pravo agency:</div>
-            <div class="footer__text-adress">01001, Киев, ул.Костёльная 9, оф.8</div>
-            <div class="footer__text-phone">+380 (67) 324 10 10</div>
+            <div class="footer__text-adress">index, Tallin , Narva maantee "number"</div>
+            <div class="footer__text-phone">+3(72) 372 72 72</div>
             <a href="mailto:tovstokhatko.denis@gmail.com" class="footer__text-mail">hello@pravo.agency</a>
         </div>
         <div class="footer__social">
