--- a/tutorio/index.html
+++ b/tutorio/index.html
@@ -71,60 +71,48 @@
             
 
             <div class="gallery">
-              <a target="_blank" href="">
-                <img src="img/Criss-Cross-Trees-1000x431.jpg" alt="Fjords" width="300" height="200">
+              <a target="_blank" href="https://tutorioeu.github.io/MobDemo2/app/">
+                <img src="img/AppDemo2.png" alt="Fjords" width="400" height="300">
+              </a>
+              
+
+            </div>
+
+            <div class="gallery">
+              <a target="_blank" href="https://tutorioeu.github.io/LawComDemo/">
+                <img src="img/pravo.png" alt="Forest" width="400" height="300">
+              </a>
+
+            </div>
+
+            <div class="gallery">
+              <a target="_blank" href="https://tutorioeu.github.io/Restaurant_Demo/">
+                <img src="img/restaurant.png" alt="Northern Lights" width="400" height="300">
               </a>
 
             </div>
 
             <div class="gallery">
               <a target="_blank" href="">
-                <img src="img/Lead-Singer-Singer-Performance-Show-Music-Stage-455750.jpg" alt="Forest" width="300" height="200">
+                <img src="img/Nazippe_haniamir_ncnd.jpg" alt="Mountains" width="400" height="300">
               </a>
 
             </div>
 
             <div class="gallery">
               <a target="_blank" href="">
-                <img src="img/Nazippe_haniamir_ncnd.jpg" alt="Northern Lights" width="300" height="200">
+                <img src="img/Criss-Cross-Trees-1000x431.jpg" alt="Fjords" width="400" height="300">
               </a>
 
             </div>
 
             <div class="gallery">
               <a target="_blank" href="">
-                <img src="img/Nazippe_haniamir_ncnd.jpg" alt="Mountains" width="300" height="200">
+                <img src="img/Lead-Singer-Singer-Performance-Show-Music-Stage-455750.jpg" alt="Forest" width="400" height="300">
               </a>
 
             </div>
 
-            <div class="gallery">
-              <a target="_blank" href="">
-                <img src="img/Criss-Cross-Trees-1000x431.jpg" alt="Fjords" width="300" height="200">
-              </a>
-
-            </div>
-
-            <div class="gallery">
-              <a target="_blank" href="">
-                <img src="img/Lead-Singer-Singer-Performance-Show-Music-Stage-455750.jpg" alt="Forest" width="300" height="200">
-              </a>
-
-            </div>
-
-            <div class="gallery">
-              <a target="_blank" href="">
-                <img src="img/Nazippe_haniamir_ncnd.jpg" alt="Northern Lights" width="300" height="200">
-              </a>
-
-            </div>
-
-            <div class="gallery">
-              <a target="_blank" href="">
-                <img src="img/Nazippe_haniamir_ncnd.jpg" alt="Mountains" width="300" height="200">
-              </a>
-
-            </div>
 
         </div>
     </section>
