--- a/tutorio/index.html
+++ b/tutorio/index.html
@@ -125,9 +125,9 @@
     </section>
 
     <div class="h_line"></div>
-    <section class="projects fade-in">
+    <section class="projects ">
         <h5 class="slide-left">Recent Projects</h5>
-        <div class="recent_projects"> <!-- The new article tag. The id is supplied so it can be scrolled into view. -->       
+        <div class="recent_projects fade-in"> <!-- The new article tag. The id is supplied so it can be scrolled into view. -->       
                 <div class="gallery">
                   <a target="_blank" href="">
                     <img src="img/Criss-Cross-Trees-1000x431.jpg" alt="Fjords" width="400" height="300">
