--- a/tutorio/index.html
+++ b/tutorio/index.html
@@ -107,7 +107,7 @@
     <div class="h_line"></div>
     <section class="about_us">
             <h4 class="slide-right">About Us</h4>
-        <div class="imac_container fade-in">
+        <div class="imac_container">
             <img src="img/imac-template.png">        
             <div class="mac_info">
                 <img class="mySlides" src="img/Sead-Singer-Singer-Performance-Show-Music-Stage-455750.jpg">
