--- a/tutorio/index.html
+++ b/tutorio/index.html
@@ -31,7 +31,7 @@
     <section class="bg" > <!-- Defining the #page section with the section tag -->
     <div class="particles_cont" id="particles-js">
         <div class="header_container ">
-            <a hclass="nav_a">RDJ Logo</a>
+            <a hclass="nav_a">RDJ Logo...</a>
         </div>
         <h1 class="fade-in">RDJ Sollutions</h1>
     </div>
