--- a/tutorio/index.html
+++ b/tutorio/index.html
@@ -51,9 +51,9 @@
         
 
 
-    <section class="demo">
-        <h2 class="slide-left">Our Demos and Temlates</h2>
-        <div class="demos fade-in"> <!-- The new article tag. The id is supplied so it can be scrolled into view. -->
+    <section class="demo fade-in">
+        <h2 class="fade-in">Our Demos and Temlates</h2>
+        <div class="demos "> <!-- The new article tag. The id is supplied so it can be scrolled into view. -->
 
             
 
@@ -106,8 +106,8 @@
 
     <div class="h_line"></div>
     <section class="about_us">
-            <h4 class="slide-right">About Us</h4>
-        <div class="imac_container">
+            <h4 class="fade-in">About Us</h4>
+        <div class="imac_container fade-in ">
             <img src="img/imac-template.png">        
             <div class="mac_info">
                 <img class="mySlides" src="img/Sead-Singer-Singer-Performance-Show-Music-Stage-455750.jpg">
@@ -125,8 +125,8 @@
     </section>
 
     <div class="h_line"></div>
-    <section class="projects ">
-        <h5 class="slide-left">Recent Projects</h5>
+    <section class="projects fade-in ">
+        <h5 class="fade-in">Recent Projects</h5>
         <div class="recent_projects fade-in"> <!-- The new article tag. The id is supplied so it can be scrolled into view. -->       
                 <div class="gallery">
                   <a target="_blank" href="">
@@ -246,16 +246,6 @@
         });
 
     });
-
-
-    function myFunction() {
-        var x = document.getElementById("myTopnav");
-        if (x.className === "topnav") {
-            x.className += " responsive";
-        } else {
-            x.className = "topnav";
-        }
-    }
 
 
 
