--- a/tutorio/index.html
+++ b/tutorio/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
@@ -33,7 +34,13 @@
         <div class="header_container ">
             <a hclass="nav_a">RDJ Logo...</a>
         </div>
-        <h1 class="fade-in">RDJ Sollutions</h1>
+
+
+        <h1 class="fade-in ">RDY
+        <div class="soll">SOLLUTIONS</div>
+
+        </h1>
+
     </div>
     <script src="./particles.js"></script>
     <script src="js/app.js"></script>
@@ -246,6 +253,7 @@
         });
 
     });
+
 
 
 
