--- a/tutorio/index.html
+++ b/tutorio/index.html
@@ -4,10 +4,13 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 
+    <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <!--meta name="viewport" content="width=device-width, initial-scale=1"-->
 
-    <title>RDJ</title>
+    <title>RDY</title>
 
     <link rel="stylesheet" type="text/css" href="styles/index.css" />
 
@@ -32,11 +35,11 @@
     <section class="bg" > <!-- Defining the #page section with the section tag -->
     <div class="particles_cont" id="particles-js">
         <div class="header_container ">
-            <a hclass="nav_a">RDJ Logo...</a>
+            <a hclass="nav_a">_RDY_</a>
         </div>
 
 
-        <h1 class="fade-in ">RDY
+        <h1 >RDY
         <div class="soll">SOLLUTIONS</div>
 
         </h1>
@@ -171,12 +174,65 @@
 
 
 </body>
-<footer> <!-- Marking the footer section -->
+<footer class="footer-distributed">
 
+            <div class="footer-left">
 
-        <div class="h_line"></div>
-        <a href="#" class="up">Go UP</a>
-        <p>Copyright 2017 - tutorio.eu</p> <!-- Change the copyright notice -->
+                <h3>RDY<span>SOLLUTIONS</span></h3>
+
+                <p class="footer-links">
+                    <a href="#">Home</a>
+                    ·
+                    <a href="#">Blog</a>
+                    ·
+                    <a href="#">Pricing</a>
+                    ·
+                    <a href="#">About</a>
+                    ·
+                    <a href="#">Faq</a>
+                    ·
+                    <a href="#">Contact</a>
+                </p>
+
+                <p class="footer-company-name">RDY Sollutions &copy; 2017</p>
+            </div>
+
+            <div class="footer-center">
+
+                <div>
+                    <i class="fa fa-map-marker"></i>
+                    <p><span>21 Revolution Street</span> Paris, France</p>
+                </div>
+
+                <div>
+                    <i class="fa fa-phone"></i>
+                    <p>+1 555 123456</p>
+                </div>
+
+                <div>
+                    <i class="fa fa-envelope"></i>
+                    <p><a href="mailto:support@company.com">support@company.com</a></p>
+                </div>
+
+            </div>
+
+            <div class="footer-right">
+
+                <p class="footer-company-about">
+                    <span>About the company</span>
+                    Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
+                </p>
+
+                <div class="footer-icons">
+
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                    <a href="#"><i class="fa fa-github"></i></a>
+
+                </div>
+
+            </div>
         
 
 </footer>
