Respinsivness fixes done

--- a/Ivy/index.html
+++ b/Ivy/index.html
@@ -93,32 +93,33 @@
       <h1>What we offer</h1>
       <div class='offer left'>
           <span class='offer-number'>
-            1.
+            1
           </span>
           <p>
-            <span>Scalability</span>
+            <span> .Scalability</span>
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.
           </p>
         </div>
         <div class='offer right'>
           <span class='offer-number'>
-            2.
+            2
           </span>
           <p>
-            <span>Speed</span>
+            <span> .Speed</span>
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.
           </p>
         </div>
         <div class='offer left'>
             <span class='offer-number'>
-              3.
+              3
             </span>
             <p>
-              <span>More...</span>
+              <span> .More...</span>
               Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.
             </p>
           </div>
     </section>
+		<!--
     <section id='platforms-container'>
       <h2>Create your bot for the most known messengers</h2>
       <div id='platforms' class='autoplay'>
@@ -247,6 +248,7 @@
         All rights reserved. Ivy &#169; 2017
       </div>
     </footer>
+		-->
     <script type="text/javascript" src='scripts/main.js'></script>
     <script type="text/javascript" src='scripts/neon.js'></script>
     <script type="text/javascript" src='scripts/gallery.js'></script>
