logos added; some responsivness fixed

--- a/Ivy/index.html
+++ b/Ivy/index.html
@@ -5,9 +5,9 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <!-- keywords for search engines-->
-      <meta name="keywords" content="...">
+      <meta name="keywords" content="Chat,Bot,Ivy,AI">
       <!-- description for search engines-->
-      <meta name="description" content="...">
+      <meta name="description" content="Ivy is a chat bot, who can be tuned according to purpose and requirements. ">
     <!---------------->
       <title> Ivy | Baltic Bot </title>
     <!---------------->
@@ -47,20 +47,21 @@
             <img src='images/socials/instagram.png'>
           </a>
         </div>
-        <span>Home</span>
-        <span>Bots</span>
-        <span>Platforms</span>
-        <span>About us</span>
-        <span>FAQ</span>
-        <span class='important'>Contact</span>
+        <span><a href='#main-bot-container'>Home</a></span>
+        <span><a href='#offer-container'>Offers</a></span>
+        <span><a href='#platforms-container'>Platforms</a></span>
+        <span><a href='#about-us'>About us</a></span>
+        <span><a href=''>FAQ</a></span>
+        <span class='important'><a href='#contacts'>Contact</a></span>
       </section>
     </header>
     <section id='main-bot-container'>
       <div id='main-logo-button'>
         <span><a>Ivy</a></span>
       </div>
-      <h1 id='main-h1'>Hello! My name is <span><a>Ivy</a></span>. I am a Bot. Ask me everything.</h1>
-      <div id='main-bot-conv-container'>
+      <h1 id='main-h1'>Hello! My name is <span><a>Ivy</a></span>. I am a Chat Bot. You can ask me everything.</h1>
+			<!--
+			<div id='main-bot-conv-container'>
         <div id='bot-messanger'>
           <div class='message friend'>
             <p class='text'>
@@ -80,7 +81,8 @@
           </div>
         </div>
       </div>
-      <div id='dots-container'>
+			-->
+			<div id='dots-container'>
         <div class='dot dot-color-1'>
         </div>
         <div class='dot dot-color-2'>
