responsive design fixes

--- a/cryptograf_website/index.html
+++ b/cryptograf_website/index.html
@@ -48,7 +48,7 @@
     </header>
     <div id='graph-container'>
       <div id='graph'>
-        <img src='images/graph.svg'>
+        <img src='images/graph.png'>
         <div id='gradient-container'>
         </div>
         <div id='graph-logo'>
