--- a/cryptograf_website/index.html
+++ b/cryptograf_website/index.html
@@ -126,7 +126,7 @@
     <!-- FOOTER -->
     <footer id="footer">
       <div id="footer-left-content">
-        <div>About</div>
+        <div id="about">About</div>
         <div>Blog</div>
         <div>Contact</div>
       </div>
