--- a/cryptograf_website/index.html
+++ b/cryptograf_website/index.html
@@ -89,7 +89,7 @@
 						type specimen book.
 					</p>
 				</div>
-				<div class="phone-container">
+				<div class="phone-container" id="phone-bottomn">
 					<img src="images/iphone2.png">
 				</div>
 			</div>
