--- a/cryptograf_website/index.html
+++ b/cryptograf_website/index.html
@@ -29,6 +29,10 @@
         <div id='logo'>
         <a><img src='images/logo.png'></a>
       </div>
+      <div id="nav-switcher">
+        <div class="closed-img">
+        </div>
+      </div>
         <div id='navigation'>
         <div id='nav-links'>
           <a>About</a>
