Responsive design finished

--- a/cryptograf_website/index.html
+++ b/cryptograf_website/index.html
@@ -27,24 +27,24 @@
     <header>
       <div id='header-container'>
         <div id='logo'>
-        <a><img src='images/logo.png'></a>
+        <a href=""><img src='images/logo.png'></a>
       </div>
-      <div id="nav-switcher">
+			<div id="nav-switcher">
         <div class="closed-img">
         </div>
       </div>
-        <div id='navigation'>
+      <div id='navigation'>
         <div id='nav-links'>
-          <a>About</a>
-          <a>Blog</a>
-          <a>Contact</a>
+          <a href="">About</a>
+          <a href="">Blog</a>
+          <a href="">Contact</a>
         </div>
         <div class='socials'>
-          <a><img src='images/facebook.png'></a>
-          <a><img src='images/instagram.png'></a>
-          <a><img src='images/tweeter.png'></a>
+          <a target="_blank" href=""><img src='images/facebook.png'></a>
+          <a target="_blank" href=""><img src='images/instagram.png'></a>
+          <a target="_blank" href=""><img src='images/tweeter.png'></a>
         </div>
-        <button id='download-button'>
+        <button id='download-button' onclick="window.location.href='#stores'">
           Download App
         </button>
       </div>
@@ -52,7 +52,7 @@
     </header>
     <div id='graph-container'>
       <div id='graph'>
-        <img src='images/graph.png'>
+        <img src='images/graph.svg'>
         <div id='gradient-container'>
         </div>
         <div id='graph-logo'>
@@ -77,8 +77,8 @@
 						type specimen book.
 					</p>
 					<div id="stores-container">
-						<img src="images/appstore.png">
-						<img src="images/google.png">
+						<a target="_blank" href="https://itunes.apple.com/ua/app/cryptograf/id1325216860?l=ru&mt=8"><img src="images/appstore.png"></a>
+						<a target="_blank" href="https://play.google.com/store/apps/details?id=com.herokuapp.cryptograf.cryptograf"><img src="images/google.png"></a>
 					</div>
 				</div>
 			</div>
@@ -123,21 +123,21 @@
     <div id="stores">
       <div id="stores-title">Start Your Portfolio Today!</div>
       <div id="stores-images">
-        <a href="https://itunes.apple.com/ua/app/cryptograf/id1325216860?l=ru&mt=8"><img src="images/appstore.png" width="162,2px" height="47px"></a>
-        <a href=""><img src="images/google.png" width="162,2px" height="47px"></a>
+        <a target="_blank" href="https://itunes.apple.com/ua/app/cryptograf/id1325216860?l=ru&mt=8"><img src="images/appstore.png" width="162,2px" height="47px"></a>
+        <a target="_blank" href="https://play.google.com/store/apps/details?id=com.herokuapp.cryptograf.cryptograf"><img src="images/google.png" width="162,2px" height="47px"></a>
       </div>
     </div>
     <!-- FOOTER -->
     <footer id="footer">
       <div id="footer-left-content">
-        <div id="about">About</div>
-        <div>Blog</div>
-        <div>Contact</div>
+        <div id="about"><a href="">About</a></div>
+        <div><a href="">Blog</a></div>
+        <div><a href="">Contact</a></div>
       </div>
       <div id="footer-mid-content">
-        <a><img src='images/facebook.png'></a>
-        <a><img src='images/instagram.png'></a>
-        <a><img src='images/tweeter.png'></a>
+        <a target="_blank" href=""><img src='images/facebook.png'></a>
+        <a target="_blank" href=""><img src='images/instagram.png'></a>
+        <a target="_blank" href=""><img src='images/tweeter.png'></a>
       </div>
       <div id="footer-right-content">
         <div>&copy; 2018 — All Right Reserved</div>
