more a tag styles

--- a/cryptograf_website/index.html
+++ b/cryptograf_website/index.html
@@ -132,7 +132,7 @@
       <div id="footer-left-content">
         <div id="about"><a href="">About</a></div>
         <div><a href="">Blog</a></div>
-        <div><a href="">Contact</a></div>
+        <div id="contact"><a href="">Contact</a></div>
       </div>
       <div id="footer-mid-content">
         <a target="_blank" href=""><img src='images/facebook.png'></a>
