--- a/cryptograf_website/index.html
+++ b/cryptograf_website/index.html
@@ -44,7 +44,7 @@
           <a target="_blank" href=""><img src='images/instagram.png'></a>
           <a target="_blank" href=""><img src='images/tweeter.png'></a>
         </div>
-        <button id='download-button' onclick="window.location.href='#stores'">
+        <button id='download-button'>
           Download App
         </button>
       </div>
