--- a/cryptograf_website/index.html
+++ b/cryptograf_website/index.html
@@ -44,7 +44,7 @@
           <a target="_blank" href=""><img src='images/instagram.png'></a>
           <a target="_blank" href=""><img src='images/tweeter.png'></a>
         </div>
-        <button id='download-button'>
+        <button id='download-button' onclick="window.location.href='#stores'">
           Download App
         </button>
       </div>
@@ -67,6 +67,7 @@
 			<div id="top-row-container">
 				<div class="phone-container">
 					<img src="images/iphone1.png">
+          <div id="img_hover"></div>
 				</div>
 				<div id="top-text-container">
 
@@ -95,6 +96,7 @@
 				</div>
 				<div class="phone-container" id="phone-bottomn">
 					<img src="images/iphone2.png">
+          <div id="img_hover"></div>
 				</div>
 			</div>
 		</div>
