--- a/MobDemo2/app/index.html
+++ b/MobDemo2/app/index.html
@@ -339,7 +339,7 @@
   <div class="container copyright-container">
     <div class="row">
       <div class="text-center">
-      <div class="made-by">Made with love by RDj Sollutions</div>
+      <div class="made-by">Made with love by Trusty Code</div>
       </div>
     </div>
   </div>
